[IOTMID-275] Fixes z-index positioning of inner page header
This fixes the positioning of the inner header as to make it
work properly on very small screens, where the navigation side
menu overlaps the page's content.

--- a/src/sass/_page.scss
+++ b/src/sass/_page.scss
@@ -62,7 +62,7 @@
   padding: 15px 30px;
   background-color: #fff;
 
-  z-index: 1000;
+  z-index: 900;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
 
   .title {
